--- a/YumBlazor/Components/Account/Pages/Register.razor
+++ b/YumBlazor/Components/Account/Pages/Register.razor
@@ -6,6 +6,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using YumBlazor.Data
+@using YumBlazor.Utility
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IUserStore<ApplicationUser> UserStore
@@ -14,6 +15,8 @@
 @inject ILogger<Register> Logger
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
+
+@inject RoleManager<IdentityRole> RoleManager
 
 <PageTitle>Register</PageTitle>
 
@@ -41,6 +44,14 @@
                 <InputText type="password" @bind-Value="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label for="confirm-password">Confirm Password</label>
                 <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
+            </div>
+            <div class="form-floating mb-3">
+                <InputSelect @bind-Value="Input.Role" class="form-select">
+                    <option value="@SD.Role_Customer">@SD.Role_Customer</option>
+                    <option value="@SD.Role_Admin">@SD.Role_Admin</option>
+                </InputSelect>
+                <label for="role">Select Role</label>
+                <ValidationMessage For="() => Input.Role" class="text-danger" />
             </div>
             <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </EditForm>
@@ -81,6 +92,20 @@
         }
 
         Logger.LogInformation("User created a new account with password.");
+
+        if(!await RoleManager.RoleExistsAsync(SD.Role_Customer))
+        {
+            await RoleManager.CreateAsync(new IdentityRole(SD.Role_Admin));
+            await RoleManager.CreateAsync(new IdentityRole(SD.Role_Customer));
+        }
+        if (Input.Role is not null)
+        {
+            await UserManager.AddToRoleAsync(user, Input.Role);
+        }
+        else
+        {
+            await UserManager.AddToRoleAsync(user, SD.Role_Customer);
+        }
 
         var userId = await UserManager.GetUserIdAsync(user);
         var code = await UserManager.GenerateEmailConfirmationTokenAsync(user);
@@ -141,5 +166,7 @@
         [Display(Name = "Confirm password")]
         [Compare("Password", ErrorMessage = "The password and confirmation password do not match.")]
         public string ConfirmPassword { get; set; } = "";
+
+        public string?  Role { get; set; }
     }
 }
