--- a/YumBlazor/Components/Layout/MainLayout.razor
+++ b/YumBlazor/Components/Layout/MainLayout.razor
@@ -1,16 +1,28 @@
-﻿@inherits LayoutComponentBase
+﻿@using YumBlazor.Utility
+
+@inherits LayoutComponentBase
+@inject AuthenticationStateProvider AuthenticationStateProvider
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+    <AuthorizeView Roles="@SD.Role_Admin">
+        <div class="sidebar">
+            <NavMenu />
+        </div>
+    </AuthorizeView>
+    @*     <AuthorizeView Roles="@SD.Role_Customer">
+        CUSOMER
+    </AuthorizeView>
+    <AuthorizeView>
+        Any authorized User
+    </AuthorizeView> *@
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
+        @if (_navBarVisible)
+        {
+            <NavBar></NavBar>
+        }
 
-        <article class="content px-4">
+        <article class="content">
             @Body
         </article>
     </main>
@@ -21,3 +33,27 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+@code{
+    private bool _navBarVisible=true;
+
+    protected override async Task OnParametersSetAsync()
+    {
+        _navBarVisible= await ShowNavBar();
+    }
+    private async Task<bool> ShowNavBar()
+    {
+        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+        var authenticated = user.Identity is not null && user.Identity.IsAuthenticated;
+        if(!authenticated)
+        {
+            return true;
+        }
+        // Navbar should not be displayed to admin user
+        if(!user.IsInRole(SD.Role_Admin))
+        {
+            return true;
+        }
+        return false;
+    }
+}
