--- a/YumBlazor/Components/Layout/NavMenu.razor
+++ b/YumBlazor/Components/Layout/NavMenu.razor
@@ -22,8 +22,11 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Category List
             </NavLink>
         </div>
-
-
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="productlist" Match="NavLinkMatch.All">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Product List
+            </NavLink>
+        </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="auth">
                 <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
