--- a/YumBlazor/Components/Pages/Cart_Pages/Cart.razor
+++ b/YumBlazor/Components/Pages/Cart_Pages/Cart.razor
@@ -1,88 +1,170 @@
 ﻿@page "/cart"
 
-<div class="row w-100">
-	<div class="col-lg-6 col-12">
-		<div class="container p-4 m-2">
-			<h4 class="text-center text-success display-6">
-				Cart Summary
-			</h4>
+@using System.Globalization
+@using Microsoft.AspNetCore.Authorization
+@using YumBlazor.Utility
 
+@inject AuthenticationStateProvider _authenticationStateProvider
+@inject IShoppingCartRepository _shoppingCartRepository
+@inject IOrderRepository _orderRepository
+@inject NavigationManager _navigationManager
 
-			<div class="d-flex p-2 m-2">
-				<div class="card flex-row w-100">
-					<img class="card-img-left" style="width: 120px;">
-					<div class="card-body">
-						<div class="d-flex justify-content-between align-items-center">
-							<h4 class="">
-								--ProductName--
-							</h4>
-							<h4>
-								--PRICE--
-							</h4>
-						</div>
-						<div class="flex-fill">
-							<h4 class="text-danger">
-								--COUNT*PRICE--
-							</h4>
-						</div>
-						<div class="d-flex justify-content-between align-items-center">
-							<div class="d-flex justify-content-between g-0">
-								<span>
-									<i class="bi bi-dash-circle-fill btn text-secondary"></i>
-								</span>
-								<span class="ml-1 me-1">
-									<b class="lead">--Count--</b>
-								</span>
-								<span>
-									<i class="bi bi-plus-circle-fill btn text-secondary"></i>
-								</span>
+@attribute [Authorize]
+
+<PageTitle>Home</PageTitle>
+
+@if (IsProcessing)
+{
+	<div class="position-absolute w-100 h-100 d-flex flex-column align-items-center bg-white justify-content-center">
+		<img src="/images/loading.gif" alt="loading" />
+	</div>
+}
+else
+{
+	<div class="row w-100">
+		<div class="col-lg-6 col-12">
+			<div class="container p-4 m-2">
+				<h4 class="text-center text-success display-6">
+					Cart Summary
+				</h4>
+				@foreach(var cartItem in ShoppingCarts)
+				{
+					<div class="d-flex p-2 m-2">
+						<div class="card flex-row w-100">
+							<img class="card-img-left" style="width: 120px;" src="@(cartItem.Product.ImageUrl ?? "/images/default.png")">
+							<div class="card-body">
+								<div class="d-flex justify-content-between align-items-center">
+									<h4 class="">
+										@cartItem.Product.Name
+									</h4>
+									<h4>
+										@cartItem.Product.Price.ToString("C", CultureInfo.GetCultureInfo("en-us"))
+									</h4>
+								</div>
+								<div class="flex-fill">
+									<h4 class="text-danger">
+										@((cartItem.Product.Price * cartItem.Count).ToString("C", CultureInfo.GetCultureInfo("en-us")))
+									</h4>
+								</div>
+								<div class="d-flex justify-content-between align-items-center">
+									<div class="d-flex justify-content-between g-0">
+										<span @onclick="()=>UpdateCartItem(cartItem.ProductId, -1)">
+											<i class="bi bi-dash-circle-fill btn text-secondary"></i>
+										</span>
+										<span class="ml-1 me-1">
+											<b class="lead">@cartItem.Count</b>
+										</span>
+										<span @onclick="()=>UpdateCartItem(cartItem.ProductId, 1)">
+											<i class="bi bi-plus-circle-fill btn text-secondary"></i>
+										</span>
+									</div>
+									<button class="btn btn-danger" @onclick="()=>UpdateCartItem(cartItem.ProductId, -1000)">Remove</button>
+								</div>
 							</div>
-							<button class="btn btn-danger">Remove</button>
 						</div>
 					</div>
-				</div>
+				}
 			</div>
-
 		</div>
-	</div>
-	<div class="col-lg-6 col-12 p-4">
-		<div class="card">
-			<div class="card-header text-success text-center display-6">
-				Pickup Details
-			</div>
-			<div class="card-body">
-				<form>
-					<div class="form-group">
-						<label>Name</label>
-						<input type="text" class="form-control" />
-					</div>
-					<div class="form-group">
-						<label>Email</label>
-						<input type="text" class="form-control" />
-					</div>
-					<div class="form-group">
-						<label>Phone</label>
-						<input type="text" class="form-control" />
-					</div>
-
-				</form>
-				<div class="card mt-4 bg-light">
+		<div class="col-lg-6 col-12 p-4">
+			<div class="card">
+				<div class="card-header text-success text-center display-6">
+					Pickup Details
+				</div>
+				<EditForm Model="OrderHeader" FormName="CartForm" OnValidSubmit="ProcessOrderCreation">
+					<DataAnnotationsValidator></DataAnnotationsValidator>
 					<div class="card-body">
-						<h4>
-							Grand Total: --$$--
-						</h4>
-						<h4>
-							No. of Items: --COUNT--
-						</h4>
+						<div class="card-body">
+							<div class="form-group">
+								<label>Name</label>
+								<InputText @bind-Value="OrderHeader.Name" class="form-control" />
+								<ValidationMessage For="@(()=>OrderHeader.Name)"></ValidationMessage>
+							</div>
+							<div class="form-group">
+								<label>Email</label>
+								<InputText class="form-control" @bind-Value="OrderHeader.Email" />
+								<ValidationMessage For="@(()=>OrderHeader.Email)"></ValidationMessage>
+							</div>
+							<div class="form-group">
+								<label>Phone</label>
+								<InputText class="form-control" @bind-Value="OrderHeader.PhoneNumber" />
+								<ValidationMessage For="@(()=>OrderHeader.PhoneNumber)"></ValidationMessage>
+							</div>
+						</div>
+						<div class="card mt-4 bg-light">
+							<div class="card-body">
+								<h4>
+									Grand Total: @OrderHeader.OrderTotal.ToString("C", CultureInfo.GetCultureInfo("en-us"));
+								</h4>
+								<h4>
+									No. of Items: @TotalItems
+								</h4>
+							</div>
+
+						</div>
 					</div>
-
-				</div>
+					<button type="submit" class="btn btn-success m-4">
+						Looks Good? Place Order!
+					</button>
+				</EditForm>
 			</div>
-
-			<button class="btn btn-success m-4">
-				Looks Good? Place Order!
-			</button>
 		</div>
 	</div>
-</div>
+}
 
+
+@code{
+	public bool IsProcessing { get; set; } = true;
+	private IEnumerable<ShoppingCart> ShoppingCarts = new List<ShoppingCart>();
+	[SupplyParameterFromForm]
+	public OrderHeader OrderHeader { get; set; } = new OrderHeader();
+	private int TotalItems { get; set; } = 0;
+
+
+	protected override async Task OnInitializedAsync()
+	{
+		var authState = await _authenticationStateProvider.GetAuthenticationStateAsync();
+		var user = authState.User;
+
+		OrderHeader.Email = user.FindFirst(u => u.Type.Contains("email"))?.Value;
+		OrderHeader.UserId = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
+		OrderHeader.Status = SD.StatusPending;
+	}
+	protected override async Task OnAfterRenderAsync(bool firstRender)
+	{
+		if (firstRender)
+		{
+			// await Task.Delay(2000);
+			await LoadCart();
+			IsProcessing = false;
+			StateHasChanged();
+		}
+	}
+	private async Task LoadCart()
+	{
+		ShoppingCarts = await _shoppingCartRepository.GetAllAsync(OrderHeader.UserId);
+		OrderHeader.OrderTotal = 0;
+		TotalItems = 0;
+		foreach(var cart in ShoppingCarts)
+		{
+			OrderHeader.OrderTotal += (Convert.ToDouble(cart.Product.Price) * cart.Count);
+			TotalItems += cart.Count;
+		}
+		OrderHeader.OrderTotal = Math.Round(OrderHeader.OrderTotal, 2);
+	}
+	private async Task UpdateCartItem(int productId, int updateBy)
+	{
+		var result = await _shoppingCartRepository.UpdateCartAsync(OrderHeader.UserId, productId, updateBy);
+		await LoadCart();
+	}
+	private async Task ProcessOrderCreation()
+	{
+		IsProcessing = true;
+		await Task.Yield();
+		OrderHeader.OrderDetails = SD.ConvertShoppingCartListToOrderDetail(ShoppingCarts.ToList());
+		await _orderRepository.CreateAsync(OrderHeader);
+		_navigationManager.NavigateTo($"/order/confirmation/{OrderHeader.Id}");
+	}
+}
+
+	
