--- a/YumBlazor/Components/Pages/Home.razor
+++ b/YumBlazor/Components/Pages/Home.razor
@@ -2,8 +2,12 @@
 
 @using System.Globalization
 
+@inject AuthenticationStateProvider _authenticationStateProvider
+@inject IJSRuntime _JS
+@inject NavigationManager _navigationManager
 @inject ICategoryRepository _categoryRepository
 @inject IProductRepository _productRepository
+@inject IShoppingCartRepository _shoppingCartRepository
 
 <PageTitle>Home</PageTitle>
 
@@ -70,7 +74,9 @@ else
                             <div class="card-body">
                                 <h5 class="card-title text-center lead text-success">@prod.Name</h5>
                                 <h4 class="text-center">
-                                    <i class="bi bi-cart3 btn btn-success text-right  px-5" style="width:300px"> Add to cart</i>
+                                    <div class="m-lg-auto p-2" @onclick="()=>AddOrderItem(prod)">
+                                        <i class="bi bi-cart3 btn btn-success text-right  px-5" style="width:300px"> Add to cart</i>
+                                    </div>
                                 </h4>
                                 <p class="card-text mt-2">@((MarkupString)prod.Description)</p>
 
@@ -137,5 +143,29 @@ else
     private string GetActiveTabClass(int categoryId)
     {
         return categoryId == _selectedCategoryId ? "active" : string.Empty;
+    }
+    private async Task AddOrderItem(Product product)
+    {
+        var authState = await _authenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+        var authenticated = user.Identity is not null && user.Identity.IsAuthenticated;
+        // if user is not authenticated then redirect to login
+        if (!authenticated)
+        {
+            _navigationManager.NavigateTo("/account/login");
+        }
+        else
+        {
+            // additem to cart
+            var result = await _shoppingCartRepository.UpdateCartAsync(user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value, product.Id, 1);
+            if(result)
+            {
+                _JS.ToastrSuccess("Product add to cart successfully");
+            }
+            else
+            {
+                _JS.ToastrError("Error encoutered");
+            }
+        }
     }
 }
